--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@
                             <li>
                                 Face Recognition
                             </li>
+                            <li>
+                                Learned Image/Video Compression
+                            </li>
                         </ul>
                     </li>
                 </ul>
@@ -289,9 +292,9 @@
             <ul>
                 <li><span class="label label-success">CVPR 2019</span> <i>"TBD"</i> </br> Sina Mokhtarzadeh Azar, Mina Ghadimi Atigh, Ahmad Nickabadi, Alexandre Alahi </br> <b> Submitted to Computer Vision and Pattern Recognition 2019 </b></li>
 
-                <li><span class="label label-success">Arxiv 2018</span> <a target="_blank" href="https://arxiv.org/abs/1809.09189"><i>"Zoom-RNN: A Novel Method for Person Recognition Using Recurrent Neural Networks"</i></a> </br> Sina Mokhtarzadeh Azar, Sajjad Azami, Mina Ghadimi Atigh, Mohammad Javadi, Ahmad Nickabadi </br> <b> Available on arxiv (1809.09189), September, 2018</b></li>
+                <li><span class="label label-success">Arxiv 2018</span> <i>"A Multi-Stream Convolutional Neural Network Framework  for Group Activity Recognition"</i> </br> Sina Mokhtarzadeh Azar, Mina Ghadimi Atigh, Ahmad Nickabadi </br> <b> Available on arxiv (1812.10328), December, 2018</b></li>
 
-                <li><span class="label label-success">CVIU 2018</span> <i>"A Multi-Stream Convolutional Neural Network Framework  for Group Activity Recognition"</i> </br> Sina Mokhtarzadeh Azar, Mina Ghadimi Atigh, Ahmad Nickabadi </br> <b> Submitted to Computer Vision and Image Understanding Journal(CVIU), July (2018)</b></li>
+                <li><span class="label label-success">Arxiv 2018</span> <a target="_blank" href="https://arxiv.org/abs/1809.09189"><i>"Zoom-RNN: A Novel Method for Person Recognition Using Recurrent Neural Networks"</i></a> </br> Sina Mokhtarzadeh Azar, Sajjad Azami, Mina Ghadimi Atigh, Mohammad Javadi, Ahmad Nickabadi </br> <b> Available on arxiv (1809.09189), September, 2018</b></li>
                 
                 <li><span class="label label-success">Robocup Symposium 2017</span> <a target="_blank" href="https://www.researchgate.net/profile/Soroush_Sadeghnejad3/publication/317063820_Humanoid_Robot_Detection_using_Deep_Learning_A_Speed-Accuracy_Tradeoff/links/5923e8bb458515e3d40b9e10/Humanoid-Robot-Detection-using-Deep-Learning-A-Speed-Accuracy-Tradeoff.pdf"><i>"Humanoid Robot Detection using Deep Learning: A Speed-Accuracy Tradeoff"</i></a> </br> Mohammad Javadi, Sina Mokhtarzadeh Azar, Sajjad Azami, Soroush Sadeghnejad, Saeed Shiry Ghidary, Jacky Baltes </br> <b> Robocup Symposium, Springer (2017)</b></li>
             </ul>
