update cvpr paper

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             
 
             <ul>
-                <li><span class="label label-success">CVPR 2019</span> <i>"TBD"</i> </br> Sina Mokhtarzadeh Azar, Mina Ghadimi Atigh, Ahmad Nickabadi, Alexandre Alahi </br> <b> Submitted to Computer Vision and Pattern Recognition 2019 </b></li>
+                <li><span class="label label-success">CVPR 2019</span> <i>"Convolutional Relational Machine for Group Activity Recognition"</i> </br> Sina Mokhtarzadeh Azar, Mina Ghadimi Atigh, Ahmad Nickabadi, Alexandre Alahi </br> <b> Computer Vision and Pattern Recognition 2019 </b></li>
 
                 <li><span class="label label-success">Arxiv 2018</span> <i>"A Multi-Stream Convolutional Neural Network Framework  for Group Activity Recognition"</i> </br> Sina Mokhtarzadeh Azar, Mina Ghadimi Atigh, Ahmad Nickabadi </br> <b> Available on arxiv (1812.10328), December, 2018</b></li>
 
